--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "script-loader": "^0.7.2"
+    "script-loader": "^0.7.2",
+    "ts-node": "^8.3.0"
   }
 }
