--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "near-shell": "github:nearprotocol/near-shell",
     "react-hot-loader": "^4.11.0",
     "style-loader": "^0.23.1",
+    "typescript": "^3.5.2",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
     "webpack-stream": "^5.2.1"
