--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "css-loader": "^2.1.1",
+    "file-loader": "^4.0.0",
     "gh-pages": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
