setup the initialization for nodeURL and helperURL

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "test": "npm run build && jest test --env=near-shell/test_environment"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "assemblyscript-json": "github:nearprotocol/assemblyscript-json",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "css-loader": "^2.1.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.1.0",
     "gh-pages": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
@@ -27,11 +27,12 @@
     "jest-environment-node": "^24.5.0",
     "near-runtime-ts": "github:nearprotocol/near-runtime-ts",
     "near-shell": "github:nearprotocol/near-shell",
-    "react-hot-loader": "^4.11.0",
+    "react-hot-loader": "^4.12.8",
     "style-loader": "^0.23.1",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1",
-    "webpack-stream": "^5.2.1"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-stream": "^5.2.1",
+    "bignum": "github:MaxGraey/bignum.wasm"
   },
   "wasmStudio": {
     "name": "Hello World Example",
