--- a/package.json
+++ b/package.json
@@ -43,12 +43,16 @@
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-polyfill": "^6.26.0",
     "connected-react-router": "^6.5.2",
+    "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "reduce-reducers": "^1.0.4",
     "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "script-loader": "^0.7.2",
     "ts-node": "^8.3.0"
   }
