--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,19 @@
+// {
+//   "presets": ["@babel/preset-env", "@babel/preset-react"],
+//   "plugins": [
+//     "react-html-attrs",
+//     "@babel/plugin-proposal-class-properties"
+//   ]
+// }
+
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+  ],
   "plugins": [
-    "react-html-attrs"
+      [
+        "@babel/plugin-proposal-class-properties"
+      ]
   ]
 }
