--- a/package.json
+++ b/package.json
@@ -40,12 +40,17 @@
     "icon": "typescript-lang-file-icon"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-polyfill": "^6.26.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
+    "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
+    "react-color-picker": "^4.0.2",
+    "react-color-picker-text": "^1.0.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
