--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-animations": "^1.0.0",
     "react-dom": "^16.8.6",
+    "react-keyframes": "^0.2.3",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
