--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-keyframes": "^0.2.3",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
