--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-polyfill": "^6.26.0",
+    "connect-history-api-fallback": "^1.6.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
     "popper.js": "^1.15.0",
