--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-keyframes": "^0.2.3",
