profile complete with defferent corgi

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crypo_corgis",
   "description": "",
   "version": "0.0.1",
-  "homepage": "https://nearprotocol.github.io/crypto-corgis-solution",
+  "homepage": "http://corgis.nearprotocol.com",
   "scripts": {
     "build": "mkdir -p out/ && gulp",
     "deploy:contract": "near deploy",
