--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
     "popper.js": "^1.15.0",
+    "project-name-generator": "^2.1.7",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
