--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "script-loader": "^0.7.2",
+    "tinycolor2": "^1.4.1",
     "ts-node": "^8.3.0"
   }
 }
