--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "jest": "^24.8.0",
     "jest-environment-node": "^24.5.0",
     "near-runtime-ts": "github:nearprotocol/near-runtime-ts",
-    "near-shell": "github:nearprotocol/near-shell",
     "react-hot-loader": "^4.12.8",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.6",
@@ -49,6 +48,9 @@
     "connect-history-api-fallback": "^1.6.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
+    "js-cookie": "^2.2.1",
+    "near-shell": "^0.10.5",
+    "nearlib": "^0.13.2",
     "popper.js": "^1.15.0",
     "project-name-generator": "^2.1.7",
     "prop-types": "^15.7.2",
