--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "assemblyscript-json": "github:nearprotocol/assemblyscript-json",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "bignum": "github:MaxGraey/bignum.wasm",
@@ -28,8 +27,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-environment-node": "^24.5.0",
-    "near-runtime-ts": "github:nearprotocol/near-runtime-ts",
-    "near-shell": "github:nearprotocol/near-shell",
+    "near-runtime-ts": "^0.5.1",
+    "near-shell": "^0.14.1",
     "react-hot-loader": "^4.12.8",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.6",
